# manta

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  build.py  environment.sh  ethernet_test.yml  gen_ila.py  index.html  logo.py  lut_mem.gtkw  manta  manta.py  mkdocs.yml  pyproject.toml  run_ila.py  sitemap.xml  test.py  test.v  versions.json
.github/: FUNDING.yml
.github/workflows/: build_docs.yml  run_tests.yml  (+9 more)
alternatives/: index.html
architecture/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
doc/: alternatives.md  architecture.md  block_memory.md  block_memory_core.md  cores.md  ethernet.md  ethernet_interface.md  examples.md  getting_started.md  how_it_works.md  index.md  installation.md  io_core.md  logic_analyzer.md  logic_analyzer_core.md  lut_memory_core.md  memory_core.md  repository_structure.md  roadmap.md  similar_tools.md  system_architecture.md  theory_of_operation.md  todo.md  tools_used.md  tutorial_0.md  tutorial_1.md  tutorial_io_core.md  uart_interface.md  use_cases.md  web_terminal.md
ethernet_interface/: index.html
examples/: build.sh
getting_started/: index.html
installation/: index.html
io_core/: index.html
latest/: 404.html  index.html  sitemap.xml
logic_analyzer_core/: index.html
memory_core/: index.html
project_0/: build.tcl  manta.yaml  manta_test.yaml  stream.py  test.yml
project_1/: manta.yaml  stream.py  test.py
repository_structure/: index.html
search/: search_index.json
src/: fifo.sv  ila_template.sv  inspecto_time.sv  manta.py  test.py  uart_tx.sv
stylesheets/: extra.css
test/: bit_fifo_tb.sv  bridge_rx_tb.sv  bridge_tx_tb.sv  bus.gtkw  bus_fix_tb.sv  bus_tb.sv  fifo_tb.sv  ila_tb.sv  logic_analyzer_tb.sv  logic_analyzer_trig_blk_sim.py  lut_mem.gtkw  lut_mem_tb.sv  lut_ram_tb.sv  manta_tb.sv  minimal_bus_tb.sv  test_bridge_rx_sim.py  test_bridge_tx_sim.py  test_config_export.py  test_ethernet_interface.py  test_examples_build.py  test_interfaces_e2e_sim.py  test_io_core_hw.py  test_io_core_sim.py  test_logic_analyzer_fsm_sim.py  test_logic_analyzer_hw.py  test_logic_analyzer_sim.py  test_mem_core_hw.py  test_mem_core_sim.py  test_source_bridge_sim.py  test_toolchains.py  test_uart_baud_mismatch.py  test_uart_rx_sim.py  test_uart_tx_sim.py  test_verilog_gen.py  test_verilog_gen.yaml  uart_tb.sv  uart_tx_tb.sv  yeet_tb.sv
uart_interface/: index.html
v0.1.0/: 404.html  index.html  sitemap.xml
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.1/: 404.html  index.html  sitemap.xml
v1.1.0/: 404.html  index.html  sitemap.xml
(+503 files in other folders)
