[project]
name = "mantaray"
version = "0.1.0"
authors = [
  { name="Fischer Moseley", email="fischerm@mit.edu" },
]
description = "An In-Situ Debugging Tool for Programmable Hardware"
readme = "README.md"
dependencies = [
  "PyYAML",
  "pyserial",
  "pyvcd",
  "scapy"
]

requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/fischermoseley/manta"

[project.scripts]
manta = "manta:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
manta = ["**/*.v"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"