[project]
name = "manta"
version = "1.0.1"
authors = [
  { name="Fischer Moseley", email="fischer.moseley@gmail.com" },
]
description = "A configurable and approachable tool for FPGA debugging and rapid prototyping"
readme = "README.md"
dependencies = [
  "amaranth[builtin-yosys]==0.5.0",
  "PyYAML",
  "pyserial",
  "liteeth==2023.12",
  "pyvcd",
]

requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "codecov",
  "ruff",
  "mkdocs-material",
  "amaranth_boards@git+https://github.com/amaranth-lang/amaranth-boards"
]

[project.urls]
"Homepage" = "https://github.com/fischermoseley/manta"

[project.scripts]
manta = "manta:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
