[project]
name = "manta-fpga"
version = "1.1.0"
authors = [
  { name="Fischer Moseley", email="fischer.moseley@gmail.com" },
]
description = "A configurable and approachable tool for FPGA debugging and rapid prototyping"
readme = "README.md"
dependencies = [
  "amaranth[builtin-yosys]>=0.5.0",
  "PyYAML",
  "pyserial",
  "liteeth==2023.12",
  "pyvcd",
]

requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "codecov",
  "pre-commit",
  "ruff",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mike",
]

[project.urls]
"Homepage" = "https://github.com/fischermoseley/manta"
"Documentation" = "https://fischermoseley.github.io/manta"
"Issues" = "https://github.com/fischermoseley/manta/issues"

[project.scripts]
manta = "manta:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
